--- a/index.html
+++ b/index.html
@@ -3,15 +3,67 @@
   <head>
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <title>Age of Empires 3 Hotkeys</title>
+    <style>
+      body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin: 20px;
+        background-color: #f5f5f5;
+      }
+      h1 {
+        color: #333;
+        border-bottom: 2px solid #4CAF50;
+        padding-bottom: 10px;
+      }
+      h2 {
+        color: #555;
+        margin-top: 20px;
+      }
+      .controls {
+        margin: 10px 0;
+      }
+      .controls button {
+        padding: 8px 16px;
+        margin-right: 10px;
+        cursor: pointer;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        font-size: 14px;
+      }
+      .controls button:hover {
+        background-color: #45a049;
+      }
+      #xml-content {
+        white-space: pre-wrap;
+        border: 1px solid #ddd;
+        padding: 16px;
+        background-color: #fff;
+        overflow: auto;
+        max-height: 600px;
+        font-family: 'Consolas', 'Courier New', monospace;
+        font-size: 12px;
+        line-height: 1.5;
+        border-radius: 4px;
+      }
+      .xml-tag { color: #1e88e5; font-weight: bold; }
+      .xml-attr { color: #e53935; }
+      .xml-value { color: #43a047; }
+      .xml-comment { color: #999; font-style: italic; }
+    </style>
   </head>
   <body>
     <h1>Age of Empires 3 Hotkeys</h1>
     <!-- XML display -->
     <h2>Loaded XML</h2>
-    <pre id="xml-content" style="white-space:pre-wrap;border:1px solid #ddd;padding:8px;max-height:400px;overflow:auto"></pre>
+    <div class="controls">
+      <button id="toggle-raw" onclick="toggleView()">Toggle Raw/Formatted</button>
+      <button id="copy-xml" onclick="copyXml()">Copy XML</button>
+    </div>
+    <pre id="xml-content"></pre>
 
     <!-- Renderer script -->
     <script src="./renderer.js"></script>
