fix button clicking CSP error

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
     <!-- XML display -->
     <h2>Loaded XML</h2>
     <div class="controls">
-      <button id="select-directory" onclick="selectNewDirectory()">Select New Directory</button>
-      <button id="select-profile" onclick="selectNewProfile()">Select New Profile</button>
-      <button id="toggle-raw" onclick="toggleView()">Toggle Raw/Formatted</button>
-      <button id="copy-xml" onclick="copyXml()">Copy XML</button>
+      <button id="select-directory">Select New Directory</button>
+      <button id="select-profile">Select New Profile</button>
+      <button id="toggle-raw">Toggle Raw/Formatted</button>
+      <button id="copy-xml">Copy XML</button>
     </div>
     <div id="status" style="margin: 10px 0; padding: 8px; background-color: #e3f2fd; border-radius: 4px; display: none;"></div>
     <pre id="xml-content"></pre>
