move views into files

--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
     <div id="hotkeys-view"></div>
     <pre id="xml-content"></pre>
 
-    <!-- Renderer script -->
+    <!-- View modules -->
+    <script src="./xmlView.js"></script>
+    <script src="./hotkeysView.js"></script>
+    <!-- Main renderer script -->
     <script src="./renderer.js"></script>
   </body>
 </html>
