move views int ofolder

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     <pre id="xml-content"></pre>
 
     <!-- View modules -->
-    <script src="./xmlView.js"></script>
-    <script src="./hotkeysView.js"></script>
+    <script src="./view/xmlView.js"></script>
+    <script src="./view/hotkeysView.js"></script>
     <!-- Main renderer script -->
     <script src="./renderer.js"></script>
   </body>
