--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
         font-weight: bold;
         color: #1565c0;
       }
+      .hotkey-default {
+        background-color: #f5f5f5;
+        color: #666;
+        font-weight: normal;
+      }
       .hotkey-status-bind {
         color: #4CAF50;
         font-weight: bold;
