--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
         color: #f44336;
         font-weight: bold;
       }
+      .hotkey-status-custom {
+        color: #FF9800;
+        font-weight: bold;
+      }
+      .hotkey-status-default {
+        color: #2196F3;
+        font-weight: bold;
+      }
       .xml-tag { color: #1e88e5; font-weight: bold; }
       .xml-attr { color: #e53935; }
       .xml-value { color: #43a047; }
