select default hotkey set

--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@
       </div>
     </div>
 
+    <div id="default-keymap-selector-container" class="file-info" style="display: none;">
+      <div class="file-info-item">
+        <span class="file-info-label">Default Keymap:</span>
+        <select id="default-keymap-selector" style="padding: 4px; border-radius: 3px; border: 1px solid #ccc;">
+        </select>
+      </div>
+    </div>
+
     <h2>Loaded XML</h2>
     <div class="controls">
       <button id="view-hotkeys">View Hotkeys</button>
