--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
       <button id="toggle-raw">Toggle Raw/Formatted</button>
       <button id="copy-xml">Copy XML</button>
     </div>
+    <div id="hotkeys-filter-container" style="display: none; margin: 10px 0;">
+      <input 
+        type="text" 
+        id="hotkeys-filter" 
+        placeholder="Filter hotkeys by action name or key..." 
+        style="width: 100%; max-width: 500px; padding: 8px; border: 1px solid #ccc; border-radius: 4px; font-size: 14px;"
+      />
+    </div>
     <div id="status" style="margin: 10px 0; padding: 8px; background-color: #e3f2fd; border-radius: 4px; display: none;"></div>
     <div id="hotkeys-view"></div>
     <pre id="xml-content"></pre>
