Allow merging files

--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
       <button id="toggle-raw">Toggle Raw/Formatted</button>
       <button id="copy-xml">Copy XML</button>
     </div>
+    <div class="controls" style="margin-top: 10px;">
+      <button id="load-default-hotkeys" style="background-color: #4CAF50; color: white;">Load Default Hotkeys</button>
+      <button id="save-profile" style="background-color: #2196F3; color: white;">Save Profile</button>
+      <button id="reload-profile">Reload Profile</button>
+    </div>
     <div id="hotkeys-filter-container" style="display: none; margin: 10px 0;">
       <input 
         type="text" 
